# robo-peoples-person

./: .env.example  .markdownlint.json  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  copilot-instructions.md  debug_cli.py  docker-compose.yml  minimal_test.py  pyproject.toml  simple_cli.py  test_cli.py  test_cli_direct.py  validate_installation.py
.github/: copilot-instructions.md
examples/: demo.py
prompts/: INITIAL.md  PLANNING.md  TASK.md
prompts/PRPs/: EXAMPLE_multi_agent_prp.md  social-graph-ai-agent.md
prompts/PRPs/templates/: prp_base.md
prompts/commands/: execute-prp.md  generate-prp.md  refactor-code.md
src/: __init__.py  main.py
src/agents/: __init__.py  insights_agent.py  social_graph_agent.py  tools.py
src/analysis/: __init__.py  export_manager.py  network_analysis.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  migrations.py  models.py  neo4j_manager.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_export_manager.py  test_insights_agent.py  test_insights_agent_new.py  test_main.py  test_migrations.py  test_models.py  test_neo4j_manager.py  test_network_analysis.py  test_tools.py
